Extended Profile handler functionality
