# Server/Profile/service.py
@@ -3,13 +3,26 @@ from flask_login import login_required, current_user
 from flask import make_response
 
 @login_required
-def getProfile():
+def getMyProfile():
     username = current_user.username
     try:
         response = getProfileInfo(username).toDictionary()
         return make_response(response, 200)
     except:
-        return make_response('', 500)
+        return make_response({"Message": 'Database Error!'} , 500)
+
+
+@login_required
+def getProfile(username):
+    try:
+        user = getProfileInfo(username)
+        if user.username is not None:
+            response = getProfileInfo(username).toDictionary()
+            return make_response(response, 200)
+        return make_response({"Message": 'User not found!'} , 422)
+    except:
+        return make_response({"Message": 'Database Error!'} , 500)
+
 
 @login_required
 def updateProfile(body):    
@@ -24,6 +37,6 @@ def updateProfile(body):
         updateProfileInfo(username, "age", age)
         updateProfileInfo(username, "bio", bio)
         updateProfileInfo(username, "phone", phone)
-        return make_response("Updated", 200)
+        return make_response({"Message" : "Profile updated."}, 200)
     except:
         return make_response('', 500)
